--- a/Eggcellent/pages/main/style.scss
+++ b/Eggcellent/pages/main/style.scss
@@ -85,6 +85,7 @@ html {
   color: $text-color;
   min-width: 300px;
   font-family: Inter;
+
   body {
     height: 100%;
     width: 100%;
@@ -595,6 +596,46 @@ html {
     }
   }
 
+  .help-arrow {
+    position: absolute;
+    right: 450px;
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+    padding: 15px;
+
+    .harrow {
+      z-index: 999;
+      background-color: #2C2D3C;
+      width: 6px;
+      height: 20px;
+      border-radius: 3px;
+      transition: .2s;
+
+      margin-bottom: -2px;
+      transform-origin: center bottom;
+
+      &:last-child {
+        margin-bottom: 0px;
+        margin-top: -2px;
+        transform-origin: center top;
+      }
+    }
+
+    &:hover {
+      .harrow {
+        background-color: #4C4F6B;
+        margin-right: -3px;
+        rotate: -15deg;
+
+        &:last-child {
+          rotate: 15deg;
+        }
+      }
+
+    }
+  }
+
   .help {
     position: absolute;
     z-index: 999;
@@ -611,10 +652,9 @@ html {
     bottom: 20px;
     border-radius: 8px;
     padding: 10px;
-    transition: right .2s ease-in-out;
 
     &.closed {
-      right: -450px;
+      right: -420px;
     }
 
     .header {
@@ -627,9 +667,9 @@ html {
       align-self: stretch;
 
       .title {
-        color: $text-color;
+        color: $text-color-light;
         font-family: Inter;
-        font-size: 20px;
+        font-size: 21px;
         font-style: normal;
         font-weight: 700;
         line-height: normal;
@@ -637,7 +677,7 @@ html {
 
       .close {
         color: $text-color-dark;
-        cursor: pointer;
+        font-size: 20px;
       }
     }
 
@@ -705,6 +745,7 @@ html {
         justify-content: space-between;
         align-items: center;
         align-self: stretch;
+        height: 31px;
 
         .text {
           color: #858699;
@@ -750,7 +791,7 @@ html {
 
           a {
             color: $text-color-dark;
-            transition: .2s;
+            transition: 0.2s;
 
             &:hover {
               color: $text-color;
@@ -759,6 +800,35 @@ html {
         }
       }
     }
+  }
+
+  body:has(.closed) {
+    .help-arrow {
+      right: 10px;
+
+      &:hover {
+        .harrow {
+          margin-right: 3px;
+          rotate: 15deg;
+  
+          &:last-child {
+            rotate: -15deg;
+          }
+        }
+  
+      }
+    }
+  }
+
+  body:has(.help-arrow:hover) {
+
+    .help {
+      filter: brightness(80%);
+    }
+  }
+
+  body:has(.help:not(.closed)) {
+    width: calc(100% - 440px);
   }
 }
 
